// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser while statements while with exit 1`] = `
Array [
  While {
    "body": Block {
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "file": undefined,
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Print {
          "expressions": Array [
            Literal {
              "_location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "type": "Literal",
              "value": BrsString {
                "kind": 3,
                "value": "looping",
              },
            },
          ],
          "tokens": Object {
            "print": Object {
              "isReserved": true,
              "kind": "Print",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "print",
            },
          },
          "type": "Print",
        },
        ExitWhile {
          "tokens": Object {
            "exitWhile": Object {
              "isReserved": false,
              "kind": "ExitWhile",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "exit while",
            },
          },
          "type": "ExitWhile",
        },
      ],
      "type": "Block",
    },
    "condition": Literal {
      "_location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "type": "Literal",
      "value": BrsBoolean {
        "kind": 2,
        "value": true,
      },
    },
    "tokens": Object {
      "endWhile": Object {
        "isReserved": false,
        "kind": "EndWhile",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end while",
      },
      "while": Object {
        "isReserved": true,
        "kind": "While",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "while",
      },
    },
    "type": "While",
  },
]
`;

exports[`parser while statements while without exit 1`] = `
Array [
  While {
    "body": Block {
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "file": undefined,
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [
        Print {
          "expressions": Array [
            Literal {
              "_location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "type": "Literal",
              "value": BrsString {
                "kind": 3,
                "value": "looping",
              },
            },
          ],
          "tokens": Object {
            "print": Object {
              "isReserved": true,
              "kind": "Print",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "print",
            },
          },
          "type": "Print",
        },
      ],
      "type": "Block",
    },
    "condition": Literal {
      "_location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "type": "Literal",
      "value": BrsBoolean {
        "kind": 2,
        "value": true,
      },
    },
    "tokens": Object {
      "endWhile": Object {
        "isReserved": false,
        "kind": "EndWhile",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end while",
      },
      "while": Object {
        "isReserved": true,
        "kind": "While",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "while",
      },
    },
    "type": "While",
  },
]
`;
